tests/sawn/fixtures/invalid/31_invalid_escape.sawn
// §2.1: \uXXXX is not a valid escape sequence
value="\u0041"
